Button hover state and z-index fix for hotkeys

--- a/app/assets/stylesheets/modules/_container.sass
+++ b/app/assets/stylesheets/modules/_container.sass
@@ -26,6 +26,10 @@
   color: #333333
   //text-shadow: 1px 1px 0px darken(#01883b, 10%)
 
+ul.tools
+  position: relative
+  z-index: 1
+
 // Login
 
 .login 
