--- a/app/assets/stylesheets/modules/action_dashboard/_action_dashboard.sass
+++ b/app/assets/stylesheets/modules/action_dashboard/_action_dashboard.sass
@@ -85,6 +85,15 @@
           filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#edb106', endColorstr='#dba206',GradientType=0 )
           border: 1px solid #AF8205
           text-shadow: 1px 1px 0px #AF8205
+          &:hover
+            background: #edb106
+            background: -moz-linear-gradient(top,  #edb106 0%, #b79605 100%)
+            background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#edb106), color-stop(100%,#b79605))
+            background: -webkit-linear-gradient(top,  #edb106 0%,#b79605 100%)
+            background: -o-linear-gradient(top,  #edb106 0%,#b79605 100%)
+            background: -ms-linear-gradient(top,  #edb106 0%,#b79605 100%)
+            background: linear-gradient(to bottom,  #edb106 0%,#b79605 100%)
+            filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#edb106', endColorstr='#b79605',GradientType=0 )
         &.fold
           background: #a30b07
           background: -moz-linear-gradient(top,  #a30b07 0%, #990707 100%)
@@ -96,6 +105,17 @@
           filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a30b07', endColorstr='#990707',GradientType=0 )
           border: 1px solid #720505
           text-shadow: 1px 1px solid #720505
+          &:hover
+            background: #a30b07
+            background: -moz-linear-gradient(top, #a30b07 0%, #820606 100%)
+            background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#a30b07), color-stop(100%,#820606))
+            background: -webkit-linear-gradient(top, #a30b07 0%,#820606 100%)
+            background: -o-linear-gradient(top, #a30b07 0%,#820606 100%)
+            background: -ms-linear-gradient(top, #a30b07 0%,#820606 100%)
+            background: linear-gradient(to bottom, #a30b07 0%,#820606 100%)
+            filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a30b07', endColorstr='#820606',GradientType=0 )
+
+
 
 
 
